public/style.css
@font-face {
  font-family: 'LexendRegular';
  src: url('./fonts/LexendDeca-Regular.ttf');
}

/**
 * Fix user-agent
 */

* {
  box-sizing: border-box;
}

html, body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
  position: fixed;
}

body {
  font-family: 'LexendRegular', sans-serif;
}

body * {
  font-family: 'LexendRegular', sans-serif;
}

#startButton {
  position: absolute;
  width: 200px;
  bottom: 20px;
  left: calc(50% - 100px);
  /* background: blue; */
  background: green;
  color: white;
  padding: 4px 0;
  border: none;
  height: 64px;
  font-size: 24px;

  display: flex;
  align-items: center;
  justify-content: center;
}

.panel {
  position: fixed;
  background: #EFEFEF;
  border-radius: 4px;
  box-sizing: border-box;
}

.debug-panel {
  top: 8px;
  right: 8px;
  width: 200px;
  height: auto;
  padding: 20px;
  background: #EFEFEF;

  font-size: 10px;
}

.panel-players {
  width: calc(100% - 8px);
  bottom: 40px;
  left: 4px;

  transition: all 0.25s ease;
}

.player-row {
  display: flex;
  justify-content: space-between;
  grid-column-gap: 8px;
  transition: all 0.75s ease;
  opacity: 0;
}
.player-row.is-revealed {
  opacity: 1;
}
.player-row-bar {
  width: 100%;
  height: 8px;
  background: #b5b5b5;

}
.player-row-text {
  margin: 0;
}

.word-box-wrapper {
  width: 100%;
  height: 80px;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  grid-column-gap: 8px;
  grid-row-gap: 8px;

  z-index: 12;
  position: absolute;
  top: 64px;
}

@media screen and (min-width: 768px) {
  .word-box-wrapper {
    /* top: 0; */
  }
}

.word-box {
  padding: 4px 8px;
  background: #dfdfdf;
  border-radius: 2px;
  font-size: 14px;
  color: black;
  font-family: Arial, Helvetica, sans-serif;
  transition: all 0.25s ease;
  box-sizing: border-box;
}
.word-box:hover {
  background: #c3c3c3;
}
.word-box.word-box--selected {
  border: 1px solid purple;
}
.word-box p {
  user-select: none;
  margin: 0;
}


/**
 * Canvas
 */

.whiteboard {
  height: 100%;
  width: 100%;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
}

.colors {
  position: fixed;
  visibility: hidden;
}

.color {
  display: inline-block;
  height: 48px;
  width: 48px;
}

.color.black { background-color: black; }
.color.red { background-color: red; }
.color.green { background-color: green; }
.color.blue { background-color: blue; }
.color.yellow { background-color: yellow; }

